test/JDBC/expected/BABEL-820.out
SELECT 42 = CAST(42 AS numeric(38,0))
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '=' at line 1 and character position 10)~~


SELECT CAST(42 AS numeric(38,0)) = 42
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '=' at line 1 and character position 33)~~



CREATE TABLE babel_820_test_table1(test_id INT IDENTITY, test_col1 INT)
GO

INSERT INTO babel_820_test_table1 (test_col1) VALUES (10), (20), (30)
GO
~~ROW COUNT: 3~~



SELECT test_col1 FROM babel_820_test_table1 WHERE test_id = @@IDENTITY
GO
~~START~~
int
30
~~END~~



DROP TABLE babel_820_test_table1
GO

